Refactor OpenAPI spec: Replace inline `status` and `paymentMethod` definitions with reusable `OrderStatus` and `PaymentMethod` schemas.

--- a/openapi/ordering.yaml
+++ b/openapi/ordering.yaml
@@ -652,11 +652,9 @@ components:
           format: date-time
           example: "2024-04-04T00:12:45Z"
         status:
-          type: string
-          example: "PAID"
+          $ref: "#/components/schemas/OrderStatus"
         paymentMethod:
-          type: string
-          example: "GATEWAY_BALANCE"
+          $ref: "#/components/schemas/PaymentMethod"
         shipping:
           $ref: "#/components/schemas/Shipping"
         billing:
@@ -812,6 +810,17 @@ components:
         phone:
           type: string
           example: "1191234564"
+
+    OrderStatus:
+      type: string
+      description: Order status
+      enum: [ DRAFT, PLACED, PAID, READY, CANCELED ]
+      example: PLACED
+    PaymentMethod:
+      type: string
+      description: Payment method
+      enum: [ CREDIT_CARD, GATEWAY_BALANCE ]
+      example: CREDIT_CARD
 
   examples:
     BadRequest:
