Add OpenAPI documentation for shopping cart endpoints and related schemas
Added `POST /api/v1/shopping-carts` endpoint for shopping cart registration. Introduced `ShoppingCart`, `ShoppingCartInput`, `ShoppingCartItem`, and related schemas. Updated responses and reusable components.

--- a/openapi/ordering.yaml
+++ b/openapi/ordering.yaml
@@ -309,6 +309,38 @@ paths:
         500:
           $ref: '#/components/responses/InternalServerError'
 
+  /api/v1/shopping-carts:
+    post:
+      summary: Register new shopping cart
+      description: Register new shopping cart
+      operationId: registerShoppingCart
+      tags:
+        - Shopping Carts
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/ShoppingCartInput'
+      responses:
+        201:
+          description: Shopping cart registered successfully
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ShoppingCart'
+          headers:
+            Location:
+              schema:
+                type: string
+                example: '/api/v1/shopping-carts/019b962e-cebd-7910-a5df-0afe586d05fe'
+              description: URL of the newly created resource
+        400:
+          $ref: '#/components/responses/BadRequest'
+        500:
+          $ref: '#/components/responses/InternalServerError'
+
+
+
 components:
   parameters:
     page:
@@ -956,6 +988,88 @@ components:
           $ref: "#/components/schemas/OrderStatus"
         paymentMethod:
           $ref: "#/components/schemas/PaymentMethod"
+    ShoppingCart:
+      required:
+        - id
+        - totalAmount
+        - totalItems
+        - customerId
+        - items
+      properties:
+        id:
+          type: string
+          example: '277297bf-e586-4389-9f21-b3ce0c3f6580'
+        totalAmount:
+          type: number
+          example: 41.98
+        totalItems:
+          type: integer
+          example: 1
+        customerId:
+          type: string
+          example: '277297bf-e586-4389-9f21-b3ce0c3f6580'
+        items:
+          type: array
+          items:
+            $ref: "#/components/schemas/ShoppingCartItem"
+    ShoppingCartItem:
+      required:
+        - id
+        - productId
+        - name
+        - price
+        - available
+        - quantity
+        - totalAmount
+      properties:
+        id:
+          type: string
+          example: '177297bf-e586-4389-9f21-a3ce0c3f6580'
+        productId:
+          type: string
+          example: '277297bf-e586-4389-9f21-b3ce0c3f6580'
+        name:
+          type: string
+          example: 'Desktop Gamer Dive'
+        price:
+          type: number
+          example: 100.00
+        available:
+          type: boolean
+          example: false
+        quantity:
+          type: integer
+          example: 2
+        totalAmount:
+          type: number
+          example: 140
+    ShoppingCartItemList:
+      type: object
+      required:
+        - items
+      properties:
+        items:
+          type: array
+          items:
+            $ref: "#/components/schemas/ShoppingCartItem"
+    ShoppingCartItemInput:
+      required:
+        - quantity
+        - productId
+      properties:
+        quantity:
+          type: integer
+          example: 2
+        productId:
+          type: string
+          example: '6a6ca34c-e65c-496e-adaf-f872e1784003'
+    ShoppingCartInput:
+      required:
+        - customerId
+      properties:
+        customerId:
+          type: string
+          example: '6a6ca34c-e65c-496e-adaf-f872e1784003'
 
   examples:
     BadRequest:
